# intake-hive

./: .pre-commit-config.yaml  .travis.yml  CONTRIBUTING.md  MANIFEST.in  README.rst  pyproject.toml  setup.cfg
docs/: Makefile  conf.py  index.rst  make.bat
intake_hive/: hive_source.py
intake_hive/tests/: catalog.yaml  conftest.py  dal-catalog.yaml  test_hive_source.py
intake_hive/tests/data/: user_events.csv
